Closed
Bug 1545125
Opened 4 years ago
Closed 4 years ago
Loading tab context menu FTL prevents intl.uidirection from working without a restart
Categories
(Core :: Internationalization, defect)
Core
Internationalization
Tracking
()
VERIFIED
FIXED
mozilla68
Tracking | Status | |
---|---|---|
firefox68 | --- | verified |
People
(Reporter: mconley, Assigned: mconley)
References
Details
Attachments
(1 file)
STR:
- Start Firefox
- Go to about:config, and set intl.uidirection to 1
- Notice how the UI direction changes immediately.
- Reset the pref, so that the UI direction goes back to LTR.
- Open the tab context menu by right-clicking on any tab
- In about:config, set intl.uidirection to 1 again
ER:
The UI direction should change again immediately.
AR:
The UI direction in the browser UI remains fixed. This is because Fluent is placing a localedir attribute on the root node here:
after the tab context menu FTL is attached here:
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → mconley
Assignee | ||
Comment 1•4 years ago
|
||
This way, if the user updates the pref, we can properly set the localedir
on Fluent-translated documents.
Pushed by mconley@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5becec174411 Notify DOMLocalization if the intl.uidirection pref has been changed. r=zbraniecki
Updated•4 years ago
|
Component: Tabbed Browser → Internationalization
Product: Firefox → Core
Comment 3•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox68:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
Updated•4 years ago
|
Flags: qe-verify+
Hi,
I tested this issue on Windows 10 with an old Nightly build 68.0a1 (20190416095014) and I was able to reproduce it.
I also tested it using the latest Nightly build 69.0a1 (2019-06-26) and latest Beta version 68.0b13 (20190624133534) and I'm not able to reproduce the issue. Based on this I will mark the bug as Verified.
You need to log in
before you can comment on or make changes to this bug.
Description
•