Bug 1545125 - Notify DOMLocalization if the intl.uidirection pref has been changed. r=zbraniecki

This way, if the user updates the pref, we can properly set the localedir
on Fluent-translated documents.

Differential Revision: https://phabricator.services.mozilla.com/D27928